--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@agility/content-sync": "^0.1.24",
+    "framer-motion": "^4.0.0",
     "next": "^10.0.9",
     "react": "17.0.1",
     "react-dom": "17.0.1"
