--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@agility/content-sync": "^0.1.24",
     "@netlify/plugin-nextjs": "git://github.com/netlify/netlify-plugin-nextjs.git#unstable-include-dir",
     "framer-motion": "^4.0.0",
-    "next": "10.0.7",
+    "next": "^10.0.9",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
