--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "cms-clean": "agility-next clean"
   },
   "dependencies": {
-    "@agility/content-sync": "^0.1.24",
-    "@netlify/plugin-nextjs": "git://github.com/netlify/netlify-plugin-nextjs.git#unstable-include-dir",
+    "@agility/content-sync": "^1.0.1",
+    "@netlify/plugin-nextjs": "git://github.com/netlify/netlify-plugin-nextjs.git#unstable-functions-support",
     "framer-motion": "^4.0.0",
     "next": "^10.0.9",
     "react": "17.0.1",
