--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,6 @@
   command   = "yarn build"
   publish = "out_publish"
   functions = "out_functions"
+
+[[plugins]]
+  package = "@netlify/plugin-nextjs"
