--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@agility/content-sync": "^1.0.1",
+    "@netlify/plugin-nextjs": "^3.1.0",
     "framer-motion": "^4.0.0",
     "next": "^10.0.7",
     "react": "17.0.1",
