--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-dom": "17.0.1"
   },
   "devDependencies": {
-    "@agility/nextjs": "github:agility/agility-next#agility-image",
+    "@agility/nextjs": "^0.2.0-rc1",
     "@tailwindcss/jit": "^0.1.1",
     "@tailwindcss/typography": "^0.4.0",
     "@types/node": "^14.14.35",
