--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
 		},
 
 		"pages/index.tsx": {
-			"includeDirs": ".next/cache/agility/**"
+			"includeFiles": ".next/cache/agility/**"
 		}
 	}
   }
