--- a/netlify.toml
+++ b/netlify.toml
@@ -3,5 +3,8 @@
   publish = "out_publish"
   functions = "out_functions"
 
+[[plugins]]
+  package = "@netlify/plugin-nextjs"
+
 [functions]
   included_files = [".next/cache/agility/*.json"]
