--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@agility/content-sync": "^1.0.1",
+    "@agility/plenum-ui": "^1.3.33",
     "next": "^10.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1"
